# const-type-layout

./: .fossa.yml  .gitpod.Dockerfile  Cargo.toml  README.md  README.tpl  crates.js  help.html  index.html  rust-toolchain  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  coverage.yml  fossa.yml  rustdoc.yml  security.yml
const-type-layout-derive/: Cargo.toml
const-type-layout-derive/src/: lib.rs
const_type_layout/: all.html  derive.TypeLayout.html  enum.Asyncness.html  enum.Constness.html  enum.Discriminant.html  enum.MaybeUninhabited.html  enum.Mutability.html  enum.Origin.html  enum.Safety.html  enum.TypeStructure.html  fn.hash_type_graph.html  fn.serialise_type_graph.html  fn.serialised_type_graph_len.html  index.html  macro.discriminant!.html  macro.discriminant.html  macro.struct_field_offset!.html  macro.struct_field_offset.html  macro.struct_variant_discriminant!.html  macro.struct_variant_discriminant.html  macro.struct_variant_field_offset!.html  macro.struct_variant_field_offset.html  sidebar-items.js  struct.Discriminant.html  struct.Field.html  struct.TypeLayoutGraph.html  struct.TypeLayoutInfo.html  struct.Variant.html  trait.ExtractDiscriminant.html  trait.TypeGraph.html  trait.TypeGraphLayout.html  trait.TypeLayout.html
const_type_layout/discriminant/: struct.Discriminant.html
const_type_layout/inhabited/: enum.Uninhabited.html  index.html  macro.all.html  macro.any.html  sidebar-items.js  struct.Inhabited.html
const_type_layout/typeset/: index.html  macro.tset!.html  macro.tset.html  sidebar-items.js  trait.ComputeTypeSet.html
implementors/const_type_layout/: trait.TypeGraph.js  trait.TypeLayout.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/type_layout/: trait.TypeGraphLayout.js
memoffset/: build.rs
memoffset/src/: offset_of.rs  raw_field.rs
search.desc/const_type_layout/: const_type_layout-desc-0-.js
src/: discriminant.rs  graph.rs  inhabited.rs  lib.rs  ser.rs  serde.rs  typeset.rs
src/const_type_layout/: discriminant.rs.html  inhabited.rs.html  lib.rs.html  ser.rs.html  serde.rs.html  typeset.rs.html
src/const_type_layout/impls/: mod.rs.html
src/const_type_layout/impls/alloc/: boxed.rs.html  mod.rs.html
src/const_type_layout/impls/core/: array.rs.html  cell.rs.html  cmp.rs.html  convert.rs.html  ffi.rs.html  fn.rs.html  marker.rs.html  mem.rs.html  mod.rs.html  num.rs.html  ops.rs.html  option.rs.html  pin.rs.html  primitive.rs.html  ptr.rs.html  ref.rs.html  result.rs.html  tuple.rs.html
src/const_type_layout/impls/core/sync/: atomic.rs.html  mod.rs.html
src/impls/: mod.rs
src/impls/alloc/: boxed.rs  mod.rs
src/impls/core/: array.rs  cell.rs  cmp.rs  convert.rs  ffi.rs  fn.rs  marker.rs  mem.rs  mod.rs  num.rs  ops.rs  option.rs  pin.rs  primitive.rs  ptr.rs  ref.rs  result.rs  tuple.rs
src/impls/core/sync/: atomic.rs  mod.rs
src/type_layout/: lib.rs.html
trait.impl/const_type_layout/: trait.ExtractDiscriminant.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
try-crate/: Cargo.toml
try-crate/src/: main.rs
type-layout-derive/src/: lib.rs
type_layout/: all.html  derive.TypeLayout.html  enum.TypeStructure.html  fn.serialise_type_graph.html  fn.serialised_type_graph_len.html  index.html  struct.Discriminant.html  struct.Field.html  struct.TypeLayoutGraph.html  struct.TypeLayoutInfo.html  struct.Variant.html  trait.TypeGraph.html  trait.TypeGraphLayout.html  trait.TypeLayout.html
