[package]
name = "const-type-layout"
description = "Derivable trait to view the layout of a struct, useful for debugging."
version = "0.1.0"
edition = "2018"
authors = ["Momo Langenstein <momo.langenstein@helsinki.fi>", "Lucien Greathouse <me@lpghatguy.com>"]
documentation = "https://momolangenstein.github.io/const-type-layout/const_type_layout/"
homepage = "https://github.com/MomoLangenstein/const-type-layout"
repository = "https://github.com/MomoLangenstein/const-type-layout"
readme = "README.md"
keywords = ["layout", "type", "const"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = ["serde"]

[workspace]
members = ["const-type-layout-derive", "try-crate"]

[dependencies]
const-type-layout-derive = { version = "0.1.0", path = "const-type-layout-derive" }

serde = { version = "1.0", features = ["derive"], optional = true }
