[package]
name = "const-type-layout-derive"
description = "Derive macro implementation for const-type-layout crate"
version = "0.3.0"
edition = "2021"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>", "Lucien Greathouse <me@lpghatguy.com>"]
documentation = "https://docs.rs/const-type-layout-derive/"
homepage = "https://github.com/juntyr/const-type-layout"
repository = "https://github.com/juntyr/const-type-layout"
license = "MIT OR Apache-2.0"
rust-version = "1.78" # nightly

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
