[package]
name = "const-type-layout-derive"
description = "Derive macro implementation for const-type-layout crate"
version = "0.3.1"
edition = { workspace = true }
authors = { workspace = true }
documentation = "https://docs.rs/const-type-layout-derive/"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"], default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
proc-macro-error2 = { version = "2.0", default-features = false }

[lints]
workspace = true
