[package]
name = "try-crate"
publish = false
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>", "Lucien Greathouse <me@lpghatguy.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-type-layout = { path = "..", features = ["derive", "serde"] }

serde = "1.0"
ron = "0.8"
