[package]
name = "try-crate"
publish = false
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize-to-generic-const-array = ["const-type-layout/serialize-to-generic-const-array"]

[dependencies]
const-type-layout = { path = "..", features = [
    # stable features
    "derive", "serde",
    # unstable impls for stable-ish types
    "impl-atomics", "impl-never",
    # unstable impls for unstable types
    "impl-atomics-128", "impl-sync-unsafe-cell", "impl-sync-exclusive",
] }

serde = { version = "1.0", default-features = false }
ron = { version = "0.8", default-features = false }
